提升下载准考证性能